In machine_learning_template.ipynb, restructure the EDA section with a subsection for numerical columns and by moving the subsections for categorical columns and correlations up to the start of the EDA section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -693,10 +693,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0cdb6cb0-f661-4be4-b0b5-bb6f0ba46fee",
+   "metadata": {},
+   "source": [
+    "## Numerical Columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfe81ae6-559e-432b-8cf2-8643b13ef6dd",
    "metadata": {},
    "source": [
-    "## Descriptive Statistics"
+    "### Descriptive Statistics"
    ]
   },
   {
@@ -712,18 +720,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9895c96c-daff-4873-852d-615627e17dcb",
-   "metadata": {},
-   "source": [
-    "## Numerical Target Variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8b76c43e-ff1c-4477-8610-a103373b9383",
    "metadata": {},
    "source": [
-    "### Histogram"
+    "### Histogram  \n",
+    "Distribution of a single numerical column."
    ]
   },
   {
@@ -733,184 +734,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create histogram of numerical target variable\n",
-    "sns.histplot(df[\"numerical_target\"])\n",
+    "# Create histogram of numerical column\n",
+    "sns.histplot(df[\"numerical_column\"])\n",
     "\n",
     "# Add title and axes labels \n",
-    "plt.title(\"Distribution of numerical_target\")\n",
-    "plt.xlabel(\"numerical_target\")\n",
+    "plt.title(\"Distribution of numerical_column\")\n",
+    "plt.xlabel(\"numerical_column\")\n",
     "plt.ylabel(\"Frequency\")\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
-   "metadata": {},
-   "source": [
-    "### Relationship with Numerical Features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6382adcc-1fdb-48b7-8f2a-6d27a559bbfc",
-   "metadata": {},
-   "source": [
-    "#### Correlations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3675dca5-3693-4669-8da3-6d97648bc5be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Correlations between the numerical target variable and each numerical and boolean column\n",
-    "combined_columns = numerical_columns + boolean_columns\n",
-    "df[combined_columns].corr()[\"numerical_target\"].sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
-   "metadata": {},
-   "source": [
-    "#### Scatterplots \n",
-    "Scatterplot matrix that shows scatterplots between the numerical target variable and each numerical column.   \n",
-    "Example code for 9 scatterplots in a 3x3 matrix:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36f4a478-acd0-4f18-99f8-81f9247250bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the figure size \n",
-    "plt.figure(figsize=(12, 12))\n",
-    "\n",
-    "# List of numerical columns excluding the target column\n",
-    "numerical_columns_without_target = [col for col in numerical_columns if col != \"numerical_target\"]\n",
-    "\n",
-    "# Iterate over the numerical columns\n",
-    "for i, numerical_column in enumerate(numerical_columns_without_target):\n",
-    "    # Create a subplot in a 3x3 grid (current subplot i+1 because subplot indices start at 1)\n",
-    "    plt.subplot(3, 3, i + 1)\n",
-    "    \n",
-    "    # Create a scatterplot between the current column and the numerical target\n",
-    "    sns.scatterplot(data=df, x=numerical_column, y=\"numerical_target\")\n",
-    "    \n",
-    "    # Add title and axis labels \n",
-    "    plt.title(f\"numerical_target by {numerical_column}\")\n",
-    "    plt.xlabel(f\"{numerical_column}\")\n",
-    "    plt.ylabel(\"numerical_target\")\n",
-    "\n",
-    "# Adjust layout to prevent overlap\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
-   "metadata": {},
-   "source": [
-    "### Relationship with Categorical Features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51c58bee-b56d-4f5c-9b3f-ccf5cd47203c",
-   "metadata": {},
-   "source": [
-    "#### Descriptive Statistics by Category \n",
-    "Descriptive statistics of the numerical target variable by a single categorical column."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfe5d314-45ef-4eee-9cfa-918a52081ae8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Descriptive statistics of numerical target variable by categorical column\n",
-    "target_by_category = df[\"numerical_target\"].groupby(df[\"categorical_column\"])\n",
-    "target_by_category.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7fd0cd54-3004-408b-a1b6-4874e034fd71",
-   "metadata": {},
-   "source": [
-    "#### Bar Plot  \n",
-    "Bar plot of the median of the numerical target variable by a single categorical column."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5f6c9f6-896f-4490-a125-3fe8ce91cb8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Store the median of the numerical target by category\n",
-    "median_target_by_category = target_by_category.median()\n",
-    "\n",
-    "# Bar plot of median by category\n",
-    "sns.barplot(x=median_target_by_category.index, y=median_target_by_category.values, palette=\"colorblind\")\n",
-    "\n",
-    "# Add title and axes labels\n",
-    "plt.title(\"Median numerical_target by categorical_column\")\n",
-    "plt.xlabel(\"Category\")\n",
-    "plt.ylabel(\"numerical_target\")\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
-   "metadata": {},
-   "source": [
-    "#### Bar Plot Matrix  \n",
-    "Bar plot matrix that shows bar plots between the numerical target variable and each categorical column.  \n",
-    "Example code for 5 bar plots in a 2x3 matrix:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dae6f05a-e6d8-4f98-9046-f2ad3cd56b2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the figure size to 12x6 inches\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Iterate over the categorical columns\n",
-    "for i, categorical_column in enumerate(categorical_columns):\n",
-    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
-    "    plt.subplot(2, 3, i + 1)\n",
-    "    \n",
-    "    # Create a bar plot of median numerical_target by the current categorical column\n",
-    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_target\", estimator=np.median, ci=None)\n",
-    "    \n",
-    "    # Add title and axes labels\n",
-    "    plt.title(f\"Median numerical_target by {categorical_column}\")\n",
-    "    plt.xlabel(\"Category\")\n",
-    "    plt.ylabel(\"numerical_target\")\n",
-    "\n",
-    "# Adjust layout to prevent overlap\n",
-    "plt.tight_layout()\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
@@ -1195,6 +1025,185 @@
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error saving correlation heatmap: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9895c96c-daff-4873-852d-615627e17dcb",
+   "metadata": {},
+   "source": [
+    "## Numerical Target Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
+   "metadata": {},
+   "source": [
+    "### Relationship with Numerical Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6382adcc-1fdb-48b7-8f2a-6d27a559bbfc",
+   "metadata": {},
+   "source": [
+    "#### Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3675dca5-3693-4669-8da3-6d97648bc5be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlations between the numerical target variable and each numerical and boolean column\n",
+    "combined_columns = numerical_columns + boolean_columns\n",
+    "df[combined_columns].corr()[\"numerical_target\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
+   "metadata": {},
+   "source": [
+    "#### Scatterplots \n",
+    "Scatterplot matrix that shows scatterplots between the numerical target variable and each numerical column.   \n",
+    "Example code for 9 scatterplots in a 3x3 matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36f4a478-acd0-4f18-99f8-81f9247250bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size \n",
+    "plt.figure(figsize=(12, 12))\n",
+    "\n",
+    "# List of numerical columns excluding the target column\n",
+    "numerical_columns_without_target = [col for col in numerical_columns if col != \"numerical_target\"]\n",
+    "\n",
+    "# Iterate over the numerical columns\n",
+    "for i, numerical_column in enumerate(numerical_columns_without_target):\n",
+    "    # Create a subplot in a 3x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(3, 3, i + 1)\n",
+    "    \n",
+    "    # Create a scatterplot between the current column and the numerical target\n",
+    "    sns.scatterplot(data=df, x=numerical_column, y=\"numerical_target\")\n",
+    "    \n",
+    "    # Add title and axis labels \n",
+    "    plt.title(f\"numerical_target by {numerical_column}\")\n",
+    "    plt.xlabel(f\"{numerical_column}\")\n",
+    "    plt.ylabel(\"numerical_target\")\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
+   "metadata": {},
+   "source": [
+    "### Relationship with Categorical Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c58bee-b56d-4f5c-9b3f-ccf5cd47203c",
+   "metadata": {},
+   "source": [
+    "#### Descriptive Statistics by Category \n",
+    "Descriptive statistics of the numerical target variable by a single categorical column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe5d314-45ef-4eee-9cfa-918a52081ae8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Descriptive statistics of numerical target variable by categorical column\n",
+    "target_by_category = df[\"numerical_target\"].groupby(df[\"categorical_column\"])\n",
+    "target_by_category.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fd0cd54-3004-408b-a1b6-4874e034fd71",
+   "metadata": {},
+   "source": [
+    "#### Bar Plot  \n",
+    "Bar plot of the median of the numerical target variable by a single categorical column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5f6c9f6-896f-4490-a125-3fe8ce91cb8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store the median of the numerical target by category\n",
+    "median_target_by_category = target_by_category.median()\n",
+    "\n",
+    "# Bar plot of median by category\n",
+    "sns.barplot(x=median_target_by_category.index, y=median_target_by_category.values, palette=\"colorblind\")\n",
+    "\n",
+    "# Add title and axes labels\n",
+    "plt.title(\"Median numerical_target by categorical_column\")\n",
+    "plt.xlabel(\"Category\")\n",
+    "plt.ylabel(\"numerical_target\")\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
+   "metadata": {},
+   "source": [
+    "#### Bar Plot Matrix  \n",
+    "Bar plot matrix that shows bar plots between the numerical target variable and each categorical column.  \n",
+    "Example code for 5 bar plots in a 2x3 matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae6f05a-e6d8-4f98-9046-f2ad3cd56b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size to 12x6 inches\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Iterate over the categorical columns\n",
+    "for i, categorical_column in enumerate(categorical_columns):\n",
+    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(2, 3, i + 1)\n",
+    "    \n",
+    "    # Create a bar plot of median numerical_target by the current categorical column\n",
+    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_target\", estimator=np.median, ci=None)\n",
+    "    \n",
+    "    # Add title and axes labels\n",
+    "    plt.title(f\"Median numerical_target by {categorical_column}\")\n",
+    "    plt.xlabel(\"Category\")\n",
+    "    plt.ylabel(\"numerical_target\")\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
