--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1689,12 +1689,12 @@
     "- Handled incorrect data types (e.g., converted string columns to numerical columns where applicable).\n",
     "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
     "- Handled missing values (e.g., through imputation or deletion).\n",
+    "- Split data into training, validation, and test sets (e.g., 70% train, 15% validation, 15% test).\n",
+    "- Scaled numerical features (e.g., using StandardScaler).\n",
+    "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
+    "- Trained baseline models (e.g., regression, random forest, XGBoost).\n",
     "\n",
     "Next Steps:\n",
-    "- Split data into training, validation, and test sets (e.g., 70% train, 15% validation, 15% test).\n",
-    "- Scale numerical features (e.g., using StandardScaler).\n",
-    "- Encode categorical features (e.g., using One-Hot Encoding).\n",
-    "- Train baseline models (e.g., regression, random forest, XGBoost).\n",
     "- Perform hyperparameter tuning (e.g., using GridSearchCV).\n",
     "- Select final model based on performance evaluation (e.g., using accuracy, precision, recall, F1 score, R-squared, or RMSE).\n",
     "- Save model weights (e.g., as a pickle file).\n",
