In machine_learning_template.ipynb, rename Data Quality Checks section to Initial Data Inspection and update documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -151,7 +151,8 @@
    "id": "52d7809f-dd55-4350-a52d-7c20c761a102",
    "metadata": {},
    "source": [
-    "# Data Quality Checks"
+    "# Initial Data Inspection  \n",
+    "Basic exploration of the dataset to understand its structure and detect obvious issues."
    ]
   },
   {
@@ -161,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show DataFrame info\n",
+    "# Show DataFrame info to check the number of rows and columns, data types and missing values\n",
     "df.info()"
    ]
   },
@@ -172,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show top five rows\n",
+    "# Show top five rows to get a sense of the data\n",
     "df.head()"
    ]
   },
