In machine_learning_template.ipynb, in EDA > Numerical Columns > Descriptive Statistics section, create subsections for single column and multiple columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -709,6 +709,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13c1f2c8-3fa9-4efb-b766-7c5d3621b789",
+   "metadata": {},
+   "source": [
+    "#### Single Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f715a025-45ee-4ee8-bfff-37ff19ceddc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Descriptive statistics of a single numerical column\n",
+    "df[\"numerical_column\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "720ceaf9-308a-46d6-a0a4-dd81b796bdd6",
+   "metadata": {},
+   "source": [
+    "#### Multiple Columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "565ce7fc-350e-4624-949a-60d1386bb82f",
