In machine_learning_template.ipynb, in EDA > Numerical Columns > Histogram section, create subsection for single column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -751,7 +751,15 @@
    "id": "8b76c43e-ff1c-4477-8610-a103373b9383",
    "metadata": {},
    "source": [
-    "### Histogram  \n",
+    "### Histogram "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc6c4705-ccfa-4b08-9789-9c5319d71e52",
+   "metadata": {},
+   "source": [
+    "#### Single Column  \n",
     "Distribution of a single numerical column."
    ]
   },
