In machine_learning_template.ipynb, restructure EDA section to have a subsection for Univariate EDA including descriptive statistics and histogram for numerical columns and frequencies for categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -694,10 +694,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "959b0e23-3001-433d-a0fe-9d3d0c040fe6",
+   "metadata": {},
+   "source": [
+    "## Univariate EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0cdb6cb0-f661-4be4-b0b5-bb6f0ba46fee",
    "metadata": {},
    "source": [
-    "## Numerical Columns"
+    "### Numerical Columns"
    ]
   },
   {
@@ -705,7 +713,7 @@
    "id": "cfe81ae6-559e-432b-8cf2-8643b13ef6dd",
    "metadata": {},
    "source": [
-    "### Descriptive Statistics"
+    "#### Descriptive Statistics"
    ]
   },
   {
@@ -713,7 +721,7 @@
    "id": "13c1f2c8-3fa9-4efb-b766-7c5d3621b789",
    "metadata": {},
    "source": [
-    "#### Single Column"
+    "##### Single Column"
    ]
   },
   {
@@ -732,7 +740,7 @@
    "id": "720ceaf9-308a-46d6-a0a4-dd81b796bdd6",
    "metadata": {},
    "source": [
-    "#### Multiple Columns"
+    "##### Multiple Columns"
    ]
   },
   {
@@ -751,7 +759,7 @@
    "id": "8b76c43e-ff1c-4477-8610-a103373b9383",
    "metadata": {},
    "source": [
-    "### Histogram "
+    "#### Histogram "
    ]
   },
   {
@@ -759,7 +767,7 @@
    "id": "dc6c4705-ccfa-4b08-9789-9c5319d71e52",
    "metadata": {},
    "source": [
-    "#### Single Column  \n",
+    "##### Single Column  \n",
     "Distribution of a single numerical column."
    ]
   },
@@ -787,7 +795,7 @@
    "id": "c01f9891-a8ab-4a10-9351-2be2e20a1e8e",
    "metadata": {},
    "source": [
-    "## Categorical Columns"
+    "### Categorical Columns"
    ]
   },
   {
@@ -795,7 +803,7 @@
    "id": "775bdb25-d466-48d1-bf2f-f2168e7bd774",
    "metadata": {},
    "source": [
-    "### Frequencies"
+    "#### Frequencies"
    ]
   },
   {
@@ -803,7 +811,7 @@
    "id": "5735f52c-eb16-4658-a566-0fcebf883180",
    "metadata": {},
    "source": [
-    "#### Single Column"
+    "##### Single Column"
    ]
   },
   {
@@ -864,7 +872,7 @@
    "id": "5c44f3be-22bb-498c-9560-8a53cbe51cee",
    "metadata": {},
    "source": [
-    "#### Multiple Columns"
+    "##### Multiple Columns"
    ]
   },
   {
@@ -949,10 +957,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9895c96c-daff-4873-852d-615627e17dcb",
+   "metadata": {},
+   "source": [
+    "## Numerical Target Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
+   "metadata": {},
+   "source": [
+    "### Relationship with Numerical Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "05bed553-89be-4154-9775-d784adfc100f",
    "metadata": {},
    "source": [
-    "## Correlations"
+    "#### Correlations"
    ]
   },
   {
@@ -1061,22 +1085,6 @@
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error saving correlation heatmap: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9895c96c-daff-4873-852d-615627e17dcb",
-   "metadata": {},
-   "source": [
-    "## Numerical Target Variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
-   "metadata": {},
-   "source": [
-    "### Relationship with Numerical Features"
    ]
   },
   {
