In machine_learning_template.ipynb, restructure EDA section to have a subsection for Bivariate EDA including correlations and scatterplots for numerical column with numerical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -960,7 +960,7 @@
    "id": "9895c96c-daff-4873-852d-615627e17dcb",
    "metadata": {},
    "source": [
-    "## Numerical Target Variable"
+    "## Bivariate EDA"
    ]
   },
   {
@@ -968,7 +968,7 @@
    "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
    "metadata": {},
    "source": [
-    "### Relationship with Numerical Features"
+    "### Numerical Column with Numerical Column"
    ]
   },
   {
@@ -1092,7 +1092,7 @@
    "id": "6382adcc-1fdb-48b7-8f2a-6d27a559bbfc",
    "metadata": {},
    "source": [
-    "#### Correlations"
+    "Correlations of target variable with features:"
    ]
   },
   {
@@ -1102,7 +1102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correlations between the numerical target variable and each numerical and boolean column\n",
+    "# Correlations between the numerical target variable and each numerical and boolean feature\n",
     "combined_columns = numerical_columns + boolean_columns\n",
     "df[combined_columns].corr()[\"numerical_target\"].sort_values(ascending=False)"
    ]
