--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1155,7 +1155,7 @@
    "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
    "metadata": {},
    "source": [
-    "### Relationship with Categorical Features"
+    "### Numerical Column with Categorical Column"
    ]
   },
   {
@@ -1164,7 +1164,7 @@
    "metadata": {},
    "source": [
     "#### Descriptive Statistics by Category \n",
-    "Descriptive statistics of the numerical target variable by a single categorical column."
+    "Descriptive statistics of the numerical column by a single categorical column."
    ]
   },
   {
@@ -1174,9 +1174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of numerical target variable by categorical column\n",
-    "target_by_category = df[\"numerical_target\"].groupby(df[\"categorical_column\"])\n",
-    "target_by_category.describe()"
+    "# Descriptive statistics of numerical column by categorical column\n",
+    "numerical_by_category = df[\"numerical_column\"].groupby(df[\"categorical_column\"])\n",
+    "numerical_by_category.describe()"
    ]
   },
   {
@@ -1185,7 +1185,7 @@
    "metadata": {},
    "source": [
     "#### Bar Plot  \n",
-    "Bar plot of the median of the numerical target variable by a single categorical column."
+    "Bar plot of the median of the numerical column by a single categorical column."
    ]
   },
   {
@@ -1195,16 +1195,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Store the median of the numerical target by category\n",
-    "median_target_by_category = target_by_category.median()\n",
+    "# Store the median of the numerical column by category\n",
+    "median_by_category = numerical_by_category.median()\n",
     "\n",
     "# Bar plot of median by category\n",
-    "sns.barplot(x=median_target_by_category.index, y=median_target_by_category.values, palette=\"colorblind\")\n",
+    "sns.barplot(x=median_by_category.index, y=median_by_category.values, palette=\"colorblind\")\n",
     "\n",
     "# Add title and axes labels\n",
-    "plt.title(\"Median numerical_target by categorical_column\")\n",
+    "plt.title(\"Median numerical_column by categorical_column\")\n",
     "plt.xlabel(\"Category\")\n",
-    "plt.ylabel(\"numerical_target\")\n",
+    "plt.ylabel(\"numerical_column\")\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
@@ -1216,7 +1216,7 @@
    "metadata": {},
    "source": [
     "#### Bar Plot Matrix  \n",
-    "Bar plot matrix that shows bar plots between the numerical target variable and each categorical column.  \n",
+    "Bar plot matrix that shows bar plots between the numerical column and each categorical column.  \n",
     "Example code for 5 bar plots in a 2x3 matrix:"
    ]
   },
@@ -1235,13 +1235,13 @@
     "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
     "    plt.subplot(2, 3, i + 1)\n",
     "    \n",
-    "    # Create a bar plot of median numerical_target by the current categorical column\n",
-    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_target\", estimator=np.median, ci=None)\n",
+    "    # Create a bar plot of the median of the numerical column by the current categorical column\n",
+    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_column\", estimator=np.median, ci=None)\n",
     "    \n",
     "    # Add title and axes labels\n",
-    "    plt.title(f\"Median numerical_target by {categorical_column}\")\n",
+    "    plt.title(f\"Median numerical_column by {categorical_column}\")\n",
     "    plt.xlabel(\"Category\")\n",
-    "    plt.ylabel(\"numerical_target\")\n",
+    "    plt.ylabel(\"numerical_column\")\n",
     "\n",
     "# Adjust layout to prevent overlap\n",
     "plt.tight_layout()\n",
