In machine_learning_template.ipynb, in EDA > Bivariate EDA section, update markdown text documentation for scatterplots

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1113,7 +1113,7 @@
    "metadata": {},
    "source": [
     "#### Scatterplots \n",
-    "Scatterplot matrix that shows scatterplots between the numerical target variable and each numerical column.   \n",
+    "Scatterplot matrix that shows scatterplots between a numerical column (e.g., the target variable) and each other numerical column.   \n",
     "Example code for 9 scatterplots in a 3x3 matrix:"
    ]
   },
