In machine_learning_template.ipynb, add modeling section which includes subsections for regression task and classification task

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1332,10 +1332,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64f779f4-707e-4898-a6c6-804e18c325c9",
+   "metadata": {},
+   "source": [
+    "# Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
-    "# Regression Task  \n",
+    "## Regression Task  \n",
     "For a regression problem, where the goal is to predict a numerical target variable."
    ]
   },
@@ -1344,7 +1352,7 @@
    "id": "bc4a506f-0b4a-4aad-bfac-3e68f65f3dea",
    "metadata": {},
    "source": [
-    "## Helper Function for Residual Plots  \n",
+    "### Helper Function for Residual Plots  \n",
     "Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically."
    ]
   },
@@ -1395,7 +1403,7 @@
    "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
    "source": [
-    "## Training Baseline Models (Individually)  "
+    "### Training Baseline Models (Individually)  "
    ]
   },
   {
@@ -1403,7 +1411,7 @@
    "id": "cb12588e-68c3-4fe3-b858-8ab0fb7b800f",
    "metadata": {},
    "source": [
-    "### Linear Regression"
+    "#### Linear Regression"
    ]
   },
   {
@@ -1447,7 +1455,7 @@
    "id": "4da407ee-333e-4bbf-9d83-6696852c8c35",
    "metadata": {},
    "source": [
-    "### Support Vector Regressor"
+    "#### Support Vector Regressor"
    ]
   },
   {
@@ -1491,7 +1499,7 @@
    "id": "5770a103-1db7-4744-b484-44e63c1bf6b3",
    "metadata": {},
    "source": [
-    "### Random Forest Regressor"
+    "#### Random Forest Regressor"
    ]
   },
   {
@@ -1535,7 +1543,7 @@
    "id": "7dc56c45-c57b-407a-8343-e5217b7d21cf",
    "metadata": {},
    "source": [
-    "### Multi-Layer Perceptron Regressor"
+    "#### Multi-Layer Perceptron Regressor"
    ]
   },
   {
@@ -1579,7 +1587,7 @@
    "id": "2e9d9b1d-e7c0-45fb-a908-008c8c706590",
    "metadata": {},
    "source": [
-    "### XGBoost Regressor"
+    "#### XGBoost Regressor"
    ]
   },
   {
@@ -1623,7 +1631,7 @@
    "id": "36172487-5eb6-495b-910e-aafdf0365a13",
    "metadata": {},
    "source": [
-    "## Training Baseline Models (Pipeline)  \n",
+    "### Training Baseline Models (Pipeline)  \n",
     "Train five baseline models:\n",
     "- Linear Regression\n",
     "- Support Vector Regressor\n",
@@ -1703,7 +1711,7 @@
    "id": "9c4bd7a1-73cd-4c7c-bea6-f0de3b7833d8",
    "metadata": {},
    "source": [
-    "## Hyperparameter Tuning"
+    "### Hyperparameter Tuning"
    ]
   },
   {
@@ -1711,7 +1719,7 @@
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
-    "# Classification Task  \n",
+    "## Classification Task  \n",
     "For a classification problem, where the goal is to predict a categorical target variable."
    ]
   },
