In machine_learning_template.ipynb, in summary section, add modeling steps

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1744,6 +1744,8 @@
     "- Split data into training, validation, and test sets (e.g., 70% train, 15% validation, 15% test).\n",
     "- Scaled numerical features (e.g., using StandardScaler).\n",
     "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
+    "\n",
+    "Modeling steps:\n",
     "- Trained baseline models (e.g., regression, random forest, XGBoost).\n",
     "\n",
     "Next Steps:\n",
