In machine_learning_template.ipynb, in summary section, add exploratory data analysis steps

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1745,6 +1745,14 @@
     "- Scaled numerical features (e.g., using StandardScaler).\n",
     "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
     "\n",
+    "Exploratory data analysis steps:\n",
+    "- Univariate analysis:\n",
+    "    - Numerical columns: Analyzed descriptive statistics (mean, median, standard deviation, etc.) and visualized distributions using histograms.\n",
+    "    - Categorical columns: Examined category frequencies and visualized them using bar plots or a bar plot matrix.\n",
+    "- Bivariate analysis:\n",
+    "    - Assessed pairwise relationships between numerical columns using scatterplots, a scatterplot matrix, and a correlation matrix. Visualized the strength of correlations through a heatmap. \n",
+    "    - Explored relationships between numerical and categorical columns with group-wise statistics (e.g. mean or median by category). Visualized these relationships using bar plots or a bar plot matrix.\n",
+    "\n",
     "Modeling steps:\n",
     "- Trained baseline models (e.g., regression, random forest, XGBoost).\n",
     "\n",
