In machine_learning_template.ipynb, in summary section, update text description

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1736,7 +1736,7 @@
    "id": "b27ae0de-8df6-4a3a-8c2e-404e167fe1ab",
    "metadata": {},
    "source": [
-    "Data preprocessing steps:\n",
+    "**Data Preprocessing**:\n",
     "- Handled duplicates (e.g., by removing duplicates based on the ID column).\n",
     "- Handled incorrect data types (e.g., converted string columns to numerical columns where applicable).\n",
     "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
@@ -1745,18 +1745,16 @@
     "- Scaled numerical features (e.g., using StandardScaler).\n",
     "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
     "\n",
-    "Exploratory data analysis steps:\n",
-    "- Univariate analysis:\n",
-    "    - Numerical columns: Analyzed descriptive statistics (mean, median, standard deviation, etc.) and visualized distributions using histograms.\n",
-    "    - Categorical columns: Examined category frequencies and visualized them using bar plots or a bar plot matrix.\n",
-    "- Bivariate analysis:\n",
-    "    - Assessed pairwise relationships between numerical columns using scatterplots, a scatterplot matrix, and a correlation matrix. Visualized the strength of correlations through a heatmap. \n",
-    "    - Explored relationships between numerical and categorical columns with group-wise statistics (e.g. mean or median by category). Visualized these relationships using bar plots or a bar plot matrix.\n",
+    "**Exploratory Data Analysis (EDA)**:\n",
+    "- Analyzed descriptive statistics (mean, median, standard deviation, etc.) of numerical columns and visualized distributions using histograms.\n",
+    "- Examined category frequencies of categorical columns and visualized them using bar plots and a bar plot matrix.\n",
+    "- Assessed bivariate relationships between numerical columns using a correlation heatmap, scatterplots, and a scatterplot matrix. \n",
+    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g. mean or median by category) and visualized them through bar plots and a bar plot matrix.\n",
     "\n",
-    "Modeling steps:\n",
+    "**Modeling**:\n",
     "- Trained baseline models (e.g., regression, random forest, XGBoost).\n",
     "\n",
-    "Next Steps:\n",
+    "**Next Steps**:\n",
     "- Perform hyperparameter tuning (e.g., using GridSearchCV).\n",
     "- Select final model based on performance evaluation (e.g., using accuracy, precision, recall, F1 score, R-squared, or RMSE).\n",
     "- Save model weights (e.g., as a pickle file).\n",
