In machine_learning_template.ipynb, in Modeling > Regression Task > Hyperparameter Tuning, add text description for section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1711,7 +1711,10 @@
    "id": "9c4bd7a1-73cd-4c7c-bea6-f0de3b7833d8",
    "metadata": {},
    "source": [
-    "### Hyperparameter Tuning"
+    "### Hyperparameter Tuning  \n",
+    "Based on baseline model training, the following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:\n",
+    "- Model 1 (e.g., Random Forest Regressor)\n",
+    "- Model 2 (e.g., XGBoost Regressor)"
    ]
   },
   {
