--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1719,6 +1719,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8360ea07-5564-47d0-81a7-8203928a18f4",
+   "metadata": {},
+   "source": [
+    "#### Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "785cd9ad-ec73-41db-81fe-b2b6f4793297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter grid \n",
+    "rf_param_grid = {\n",
+    "    \"n_estimators\": [200, 300, 400, 500],               \n",
+    "    \"max_depth\": [20, 30, 40, 50],              \n",
+    "    \"max_features\": [0.33, 0.5, 0.66, 1]                \n",
+    "}\n",
+    "\n",
+    "# Initialize grid search object\n",
+    "rf_grid_search = GridSearchCV(\n",
+    "    estimator=rf, \n",
+    "    param_grid=rf_param_grid, \n",
+    "    cv=5, \n",
+    "    scoring=\"neg_root_mean_squared_error\"\n",
+    ")\n",
+    "\n",
+    "# Fit the grid search to the training data\n",
+    "rf_grid_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
