In machine_learning_template.ipynb, in Modeling > Regression Task > Hyperparameter Tuning > Random Forest Regressor, add inline comment for R-squared and MAPE

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1747,7 +1747,7 @@
     "    estimator=rf, \n",
     "    param_grid=rf_param_grid, \n",
     "    cv=5, \n",
-    "    scoring=\"neg_root_mean_squared_error\"\n",
+    "    scoring=\"neg_root_mean_squared_error\"  # use \"r2\" for R-squared or a custom function for MAPE\n",
     ")\n",
     "\n",
     "# Fit the grid search to the training data\n",
