In machine_learning_template.ipynb, in Modeling > Regression Task > Hyperparameter Tuning > Random Forest Regressor, add hyperparameter explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1722,7 +1722,11 @@
    "id": "8360ea07-5564-47d0-81a7-8203928a18f4",
    "metadata": {},
    "source": [
-    "#### Random Forest Regressor"
+    "#### Random Forest Regressor  \n",
+    "**Hyperparameters**:\n",
+    "- **`n_estimators`**: Number of trees in the forest.\n",
+    "- **`max_depth`**: Maximum depth of each tree.\n",
+    "- **`max_features`**: Proportion of features to consider for each split. Values range from 0.0 (none) to 1.0 (all features). For example, 0.5 means 50% of the features are considered at each split. "
    ]
   },
   {
