In machine_learning_template.ipynb, in Data Preprocessing > Feature Extraction section, update subsection markdown headers

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -296,7 +296,8 @@
    "id": "e1c9931c-d4f6-4255-a894-2be60a02c26e",
    "metadata": {},
    "source": [
-    "### Categorical Feature from String Column"
+    "### Categorical from String  \n",
+    "Extract a categorical feature from a string column."
    ]
   },
   {
@@ -334,7 +335,8 @@
    "id": "48f9089b-a2fd-4305-aa23-086332d45c01",
    "metadata": {},
    "source": [
-    "### Numerical Feature from String Column"
+    "### Numerical from String  \n",
+    "Extract a numerical feature from a string column."
    ]
   },
   {
@@ -367,7 +369,8 @@
    "id": "beba6942-83b2-4bd4-9223-94bfc963beef",
    "metadata": {},
    "source": [
-    "### Boolean Feature from String Column"
+    "### Boolean from String  \n",
+    "Extract a boolean feature from a string column."
    ]
   },
   {
