--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -637,7 +637,16 @@
    "metadata": {},
    "source": [
     "## Defining Column Types  \n",
-    "Define numerical, categorical and boolean columns for downstream tasks like exploratory data analysis and machine learning."
+    "Define numerical, categorical and boolean columns for downstream tasks like exploratory data analysis, additional preprocessing steps, and machine learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b14f5252-3567-42a7-8ef2-13f52c6a4ec6",
+   "metadata": {},
+   "source": [
+    "Option 1: Manually  \n",
+    "Use this approach for small datasets or when you have specific requirements and need explicit control."
    ]
   },
   {
@@ -649,15 +658,6 @@
    "source": [
     "# Show columns and their pandas data types\n",
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b14f5252-3567-42a7-8ef2-13f52c6a4ec6",
-   "metadata": {},
-   "source": [
-    "**Option 1: Manually**  \n",
-    "Use this approach for small datasets or when you have specific requirements and need explicit control."
    ]
   },
   {
@@ -678,7 +678,7 @@
    "id": "919c7d33-ac8c-4385-8d16-8bdab200eeed",
    "metadata": {},
    "source": [
-    "**Option 2: Programmatically**  \n",
+    "Option 2: Programmatically  \n",
     "Use this approach for large datasets or when you want to automate the process."
    ]
   },
