In machine_learning_template.ipynb, in EDA > Univariate EDA section, update markdown headers and documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -700,7 +700,8 @@
    "id": "959b0e23-3001-433d-a0fe-9d3d0c040fe6",
    "metadata": {},
    "source": [
-    "## Univariate EDA"
+    "## Univariate EDA  \n",
+    "Univariate exploratory data analysis (EDA) analyzes the distribution, central tendency, and variability of a single numerical column using descriptive statistics and visualizations."
    ]
   },
   {
@@ -708,7 +709,8 @@
    "id": "0cdb6cb0-f661-4be4-b0b5-bb6f0ba46fee",
    "metadata": {},
    "source": [
-    "### Numerical Columns"
+    "### Numerical Columns  \n",
+    "Perform univariate EDA on numerical columns by examining descriptive statistics (such as mean, median, standard deviation and quartiles) and histograms for distributions."
    ]
   },
   {
@@ -724,7 +726,7 @@
    "id": "13c1f2c8-3fa9-4efb-b766-7c5d3621b789",
    "metadata": {},
    "source": [
-    "##### Single Column"
+    "Single Column:"
    ]
   },
   {
@@ -743,7 +745,7 @@
    "id": "720ceaf9-308a-46d6-a0a4-dd81b796bdd6",
    "metadata": {},
    "source": [
-    "##### Multiple Columns"
+    "Multiple Columns:"
    ]
   },
   {
@@ -770,8 +772,7 @@
    "id": "dc6c4705-ccfa-4b08-9789-9c5319d71e52",
    "metadata": {},
    "source": [
-    "##### Single Column  \n",
-    "Distribution of a single numerical column."
+    "Single Column:"
    ]
   },
   {
@@ -798,7 +799,8 @@
    "id": "c01f9891-a8ab-4a10-9351-2be2e20a1e8e",
    "metadata": {},
    "source": [
-    "### Categorical Columns"
+    "### Categorical Columns  \n",
+    "Perform univariate EDA on categorical columns by examining descriptive statistics (such as absolute and relative frequencies) and bar plots of frequencies."
    ]
   },
   {
@@ -814,7 +816,7 @@
    "id": "5735f52c-eb16-4658-a566-0fcebf883180",
    "metadata": {},
    "source": [
-    "##### Single Column"
+    "Single Column:"
    ]
   },
   {
@@ -846,7 +848,7 @@
    "id": "b057fa22-fe17-4ea5-8558-cd8454ac77d6",
    "metadata": {},
    "source": [
-    "Bar plot of frequencies:"
+    "Bar plot of frequencies of a single categorical colum:"
    ]
   },
   {
@@ -875,7 +877,7 @@
    "id": "5c44f3be-22bb-498c-9560-8a53cbe51cee",
    "metadata": {},
    "source": [
-    "##### Multiple Columns"
+    "Multiple Columns:"
    ]
   },
   {
