In machine_learning_template.ipynb, in EDA > Biivariate EDA section, update markdown headers

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -973,7 +973,7 @@
    "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
    "metadata": {},
    "source": [
-    "### Numerical Column with Numerical Column"
+    "### Numerical with Numerical"
    ]
   },
   {
@@ -1160,7 +1160,7 @@
    "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
    "metadata": {},
    "source": [
-    "### Numerical Column with Categorical Column"
+    "### Numerical with Categorical"
    ]
   },
   {
