In machine_learning_template.ipynb, in EDA > Univariate EDA section, correct typo in markdown comment

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -701,7 +701,7 @@
    "metadata": {},
    "source": [
     "## Univariate EDA  \n",
-    "Univariate exploratory data analysis (EDA) analyzes the distribution, central tendency, and variability of a single numerical column using descriptive statistics and visualizations."
+    "Univariate exploratory data analysis (EDA) analyzes the distribution, central tendency, and variability of a single column using descriptive statistics and visualizations."
    ]
   },
   {
@@ -965,7 +965,8 @@
    "id": "9895c96c-daff-4873-852d-615627e17dcb",
    "metadata": {},
    "source": [
-    "## Bivariate EDA"
+    "## Bivariate EDA  \n",
+    "Bivariate exploratory data analysis (EDA) examines the relationship between two variables, analyzing their correlation, dependencies, and interactions using summary statistics, visualizations, and statistical tests."
    ]
   },
   {
