In machine_learning_template.ipynb, in EDA > Bivariate EDA section, update markdown documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -966,7 +966,7 @@
    "metadata": {},
    "source": [
     "## Bivariate EDA  \n",
-    "Bivariate exploratory data analysis (EDA) examines the relationship between two variables, analyzing their correlation, dependencies, and interactions using summary statistics, visualizations, and statistical tests."
+    "Bivariate exploratory data analysis (EDA) examines relationships between two columns using methods such as correlation analysis, scatterplots, group-wise statistics, and bar plots."
    ]
   },
   {
@@ -974,7 +974,8 @@
    "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
    "metadata": {},
    "source": [
-    "### Numerical with Numerical"
+    "### Numerical with Numerical  \n",
+    "Analyze relationships between two numerical columns using correlation methods and visualizations like scatterplots. "
    ]
   },
   {
@@ -1161,7 +1162,8 @@
    "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
    "metadata": {},
    "source": [
-    "### Numerical with Categorical"
+    "### Numerical with Categorical  \n",
+    "Examine relationships between a numerical column and a categorical column using group-wise statistics (such as median or mean by category), and visualizations like bar plots to compare statistics by category."
    ]
   },
   {
