In machine_learning_template.ipynb, in EDA > Bivariate EDA section, rename subsection Descriptive Statistics by Category to Group-Wise Statistics

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1171,8 +1171,8 @@
    "id": "51c58bee-b56d-4f5c-9b3f-ccf5cd47203c",
    "metadata": {},
    "source": [
-    "#### Descriptive Statistics by Category \n",
-    "Descriptive statistics of the numerical column by a single categorical column."
+    "#### Group-Wise Statistics \n",
+    "Descriptive statistics of a numerical column grouped by categories in a categorical column."
    ]
   },
   {
@@ -1193,7 +1193,7 @@
    "metadata": {},
    "source": [
     "#### Bar Plot  \n",
-    "Bar plot of the median of the numerical column by a single categorical column."
+    "Bar plot of the median of a numerical column by a single categorical column."
    ]
   },
   {
@@ -1224,7 +1224,7 @@
    "metadata": {},
    "source": [
     "#### Bar Plot Matrix  \n",
-    "Bar plot matrix that shows bar plots between the numerical column and each categorical column.  \n",
+    "Bar plot matrix that shows bar plots between a single numerical column (e.g., the target variable) and each categorical column.  \n",
     "Example code for 5 bar plots in a 2x3 matrix:"
    ]
   },
