In machine_learning_template.ipynb, in EDA > Bivariate EDA section, rename subsection Scatterplot to Scatterplot Matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1119,7 +1119,7 @@
    "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
    "metadata": {},
    "source": [
-    "#### Scatterplots \n",
+    "#### Scatterplot Matrix \n",
     "Scatterplot matrix that shows scatterplots between a numerical column (e.g., the target variable) and each other numerical column.   \n",
     "Example code for 9 scatterplots in a 3x3 matrix:"
    ]
